--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\htdocs
 index.file=index.php
 run.as=LOCAL
-url=http://localhost
+url=http://localhost:8090
