--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /composerTest/nbproject/private/
 /composerTest/vendor/
+/PhpProject1/nbproject/private/
+/PhpProject2/nbproject/private/
+/nbproject/private/
