--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,6 @@
-browser.id=Chrome.INTEGRATED
 copy.src.files=false
 copy.src.on.open=false
-copy.src.target=C:\\xampp\\htdocs\\htdocs
+copy.src.target=C:\\xampp\\htdocs\\PhpProject3
 index.file=index.php
 run.as=LOCAL
-url=http://localhost:8090
+url=http://localhost/htdocs/
